--- a/CreativeWork/donut.html
+++ b/CreativeWork/donut.html
@@ -78,17 +78,18 @@
 
     <!-- Donut Chart  -->
     <article id="myViz" class="donut"></article>
-
+    
+    <!-- Graph Interactive section  -->
     <article>
       <h2 style="color: orange;">Where To Next?</h2>
       <h3>Are you planning on going somewhere under Lockdown Level One restrictions?</h3>
       <h3>Despite the continuous increase in recoveries, it's important that we practice the relevant safety precautions to avoid further infections.</h3>
       <h3>Choose from the options below to find out how to protect yourself and others while enjoying a bit of freedom.</h3>
         <section class="options">
-          <button class="button" onclick="window.location.href='../images/InfoRest.jpg'"><strong>Shopping Centre</strong></button>
-          <button class="button" onclick="window.location.href='../images/InfoRest.jpg'"><strong>Restuarant</strong></button>
-          <button class="button" onclick="window.location.href='../images/InfoSchool.png'"><strong>School</strong></button>
-          <button class="button" onclick="window.location.href='../images/InfoChurch.jpg'"><strong>Church</strong></button>
+          <button class="button" onclick="window.location.href='../Images/InfoRest.jpg'"><strong>Shopping Centre</strong></button>
+          <button class="button" onclick="window.location.href='../Images/InfoRest.jpg'"><strong>Restuarant</strong></button>
+          <button class="button" onclick="window.location.href='../Images/InfoSchool.png'"><strong>School</strong></button>
+          <button class="button" onclick="window.location.href='../Images/InfoChurch.jpg'"><strong>Church</strong></button>
         </section>
       <h3><a href="../References/index.html">References</h3>
     </article>
