--- a/CreativeWork/graph.html
+++ b/CreativeWork/graph.html
@@ -72,10 +72,7 @@
     </svg>
     <svg> 
      <rect x="50" y="50" width="10" height="10" fill="#0492C2"/>
-     <text x="70" y="60" font-size="" fill="Black"> New Reportings In Categories:</text>
-     <text x="80" y="75" font-size="" fill="Black"> Confirmed: 230 775</text>
-     <text x="80" y="90" font-size="" fill="Black"> Deaths: 4 458</text>
-     <text x="80" y="105" font-size="" fill="Black"> Recovered: 155 519</text>
+     <text x="70" y="60" font-size="" fill="Black"> New Reportings In Categories: 230 775</text>
     </svg>
     </section>
 
