--- a/CreativeWork/graph.html
+++ b/CreativeWork/graph.html
@@ -72,7 +72,7 @@
     </svg>
     <svg> 
      <rect x="50" y="50" width="10" height="10" fill="#0492C2"/>
-     <text x="70" y="60" font-size="" fill="Black"> New Reportings In Categories: 230 775</text>
+     <text x="70" y="60" font-size="" fill="Black"> New Reportings: 230 775</text>
     </svg>
     </section>
 
