--- a/CreativeWork/exam.html
+++ b/CreativeWork/exam.html
@@ -79,7 +79,7 @@
       <h3>See the content below.</h3>
         <section class="options">
           <button class="button" onclick="window.location.href='../Images/examvid.mp4'"><strong>Data Viz Video</strong></button>
-          <button class="button" onclick="location.href='https://www.theguardian.com/world/2020/may/17/hospital-patients-england-coronavirus-covid-19';"><strong>Gaurdian Article</strong></button>
+          <button class="button" onclick="location.href='https://www.theguardian.com/world/2020/may/17/hospital-patients-england-coronavirus-covid-19';"><strong>Guardian Article</strong></button>
           <button class="button" onclick="location.href='https://www.who.int/westernpacific/emergencies/covid-19/information/covid-19-new-normal';"><strong>WHO Infographics</strong></button>
           </section>
     </article>
